--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,8 @@
     </licenses>
 
     <scm>
-        <connection>scm:git:git://github.com/jline/jline3.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/jline/jline3.git</developerConnection>
+        <connection>scm:git:https://github.com/jline/jline3.git</connection>
+        <developerConnection>scm:git:https://github.com/jline/jline3.git</developerConnection>
         <url>http://github.com/jline/jline3</url>
   </scm>
 
