--- a/graal/pom.xml
+++ b/graal/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.21.1-SNAPSHOT</version>
+        <version>3.22.0</version>
     </parent>
 
     <artifactId>jline-graal</artifactId>
