--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <artifactId>jline-parent</artifactId>
     <name>JLine Parent</name>
     <description>JLine</description>
-    <version>3.21.1-SNAPSHOT</version>
+    <version>3.22.0</version>
     <packaging>pom</packaging>
 
     <licenses>
@@ -38,6 +38,7 @@
         <connection>scm:git:https://github.com/jline/jline3.git</connection>
         <developerConnection>scm:git:https://github.com/jline/jline3.git</developerConnection>
         <url>http://github.com/jline/jline3</url>
+    <tag>jline-parent-3.22.0</tag>
   </scm>
 
     <issueManagement>
@@ -73,7 +74,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.build.outputTimestamp>2021-10-19T06:22:24Z</project.build.outputTimestamp>
+        <project.build.outputTimestamp>2023-01-17T16:55:05Z</project.build.outputTimestamp>
 
         <maven.version>3.5.0</maven.version>
         <maven.compiler.source>1.8</maven.compiler.source>
