--- a/reader/pom.xml
+++ b/reader/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.22.0</version>
+        <version>3.22.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>jline-reader</artifactId>
