--- a/jline/pom.xml
+++ b/jline/pom.xml
@@ -124,6 +124,14 @@
                                 <!-- sources -->
                                 <artifactItem>
                                     <groupId>org.jline</groupId>
+                                    <artifactId>jline-native</artifactId>
+                                    <classifier>sources</classifier>
+                                    <type>jar</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.jline</groupId>
                                     <artifactId>jline-terminal</artifactId>
                                     <classifier>sources</classifier>
                                     <type>jar</type>
