--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>org.jline</groupId>
     <artifactId>jline-parent</artifactId>
-    <version>3.22.1-SNAPSHOT</version>
+    <version>3.23.0</version>
     <packaging>pom</packaging>
     <name>JLine Parent</name>
     <description>JLine</description>
@@ -74,7 +74,7 @@
     <scm>
         <connection>scm:git:https://github.com/jline/jline3.git</connection>
         <developerConnection>scm:git:https://github.com/jline/jline3.git</developerConnection>
-        <tag>jline-parent-3.22.0</tag>
+        <tag>jline-parent-3.23.0</tag>
         <url>http://github.com/jline/jline3</url>
     </scm>
 
@@ -90,7 +90,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.build.outputTimestamp>2023-01-17T16:56:47Z</project.build.outputTimestamp>
+        <project.build.outputTimestamp>2023-03-08T19:44:04Z</project.build.outputTimestamp>
 
         <maven.version>3.5.0</maven.version>
         <maven.compiler.source>1.8</maven.compiler.source>
