--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
         <gogo.jline.version>1.1.8</gogo.jline.version>
         <slf4j.version>2.0.6</slf4j.version>
         <findbugs.version>3.0.2</findbugs.version>
-        <groovy.version>4.0.7</groovy.version>
+        <groovy.version>4.0.13</groovy.version>
         <ivy.version>2.5.1</ivy.version>
         <graal.version>22.3.0</graal.version>
         <graal.plugin.version>21.2.0</graal.plugin.version>
@@ -522,7 +522,7 @@
                 <plugin>
                     <groupId>com.diffplug.spotless</groupId>
                     <artifactId>spotless-maven-plugin</artifactId>
-                    <version>2.28.0</version>
+                    <version>2.37.0</version>
                     <configuration>
                         <java>
                             <toggleOffOn />
@@ -684,11 +684,6 @@
                 <groupId>org.graalvm.nativeimage</groupId>
                 <artifactId>native-image-maven-plugin</artifactId>
             </plugin>
-
-            <plugin>
-                <groupId>com.diffplug.spotless</groupId>
-                <artifactId>spotless-maven-plugin</artifactId>
-            </plugin>
         </plugins>
     </build>
 
@@ -759,6 +754,21 @@
                         <configuration>
                             <release>8</release>
                         </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>java11</id>
+            <activation>
+                <jdk>[11,21)</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.diffplug.spotless</groupId>
+                        <artifactId>spotless-maven-plugin</artifactId>
                     </plugin>
                 </plugins>
             </build>
