--- a/pom.xml
+++ b/pom.xml
@@ -522,11 +522,13 @@
                 <plugin>
                     <groupId>com.diffplug.spotless</groupId>
                     <artifactId>spotless-maven-plugin</artifactId>
-                    <version>2.37.0</version>
+                    <version>2.38.0</version>
                     <configuration>
                         <java>
                             <toggleOffOn />
-                            <palantirJavaFormat />
+                            <palantirJavaFormat>
+                                <version>2.35.0</version>
+                            </palantirJavaFormat>
                             <importOrder>
                                 <order>java|javax,org,,\#</order>
                             </importOrder>
@@ -762,7 +764,7 @@
         <profile>
             <id>java11</id>
             <activation>
-                <jdk>[11,21)</jdk>
+                <jdk>[11,)</jdk>
             </activation>
             <build>
                 <plugins>
