--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -30,8 +30,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest, windows-latest ]
-        java: [ '11' ]
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
+        java: [ '11', '21' ]
     steps:
       - uses: actions/checkout@v2
 
@@ -48,29 +48,4 @@ jobs:
             ${{ matrix.os }}-maven-
 
       - name: Build with maven
-        run: mvn --activate-profiles ci --no-transfer-progress package -DskipTests
-
-  test:
-    needs: compile
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ ubuntu-latest, windows-latest ]
-        java: [ '1.8', '11', '17' ]
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v1
-        with:
-          java-version: ${{ matrix.java }}
-
-      - uses: actions/cache@v1
-        with:
-          path: ~/.m2/repository
-          key: ${{ matrix.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ matrix.os }}-maven-
-
-      - name: Build with maven
-        run: mvn --activate-profiles ci --no-transfer-progress package
+        run: mvn --no-transfer-progress verify
