New JNI provider

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -33,6 +33,10 @@
         </dependency>
         <dependency>
             <groupId>org.jline</groupId>
+            <artifactId>jline-terminal-jni</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jline</groupId>
             <artifactId>jline-terminal-jansi</artifactId>
         </dependency>
         <dependency>
