--- a/terminal/pom.xml
+++ b/terminal/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.23.1-SNAPSHOT</version>
+        <version>3.24.0</version>
     </parent>
 
     <artifactId>jline-terminal</artifactId>
