--- a/terminal-ffm/pom.xml
+++ b/terminal-ffm/pom.xml
@@ -25,6 +25,7 @@
     <properties>
         <java.target.version>21</java.target.version>
         <automatic.module.name>org.jline.terminal.ffm</automatic.module.name>
+        <animal-sniffer.skip>true</animal-sniffer.skip>
     </properties>
 
     <dependencies>
