Fix broken javadoc generation

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -24,6 +24,7 @@
 
     <properties>
         <automatic.module.name>org.jline.demo</automatic.module.name>
+        <maven.javadoc.skip>true</maven.javadoc.skip>
     </properties>
 
     <dependencies>
