--- a/groovy/pom.xml
+++ b/groovy/pom.xml
@@ -22,6 +22,7 @@
 
     <properties>
         <automatic.module.name>org.jline.groovy</automatic.module.name>
+        <maven.javadoc.skip>true</maven.javadoc.skip>
     </properties>
 
     <dependencies>
