--- a/jline/pom.xml
+++ b/jline/pom.xml
@@ -169,6 +169,7 @@
                     <createSourcesJar>true</createSourcesJar>
                     <createDependencyReducedPom>true</createDependencyReducedPom>
                     <promoteTransitiveDependencies>true</promoteTransitiveDependencies>
+                    <dependencyReducedPomLocation>${basedir}/.dependency-reduced-pom.xml</dependencyReducedPomLocation>
                 </configuration>
                 <executions>
                     <execution>
